# receipts

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  Receipts Landing.html  current_state.md  demo_agent.py  docker-compose.yml  pyproject.toml  requirements.txt  script.md  test_mcp.py
.github/workflows/: ci.yml  publish.yml
backend/: Dockerfile  alerts.py  auth.py  auto_verify.py  database.py  logging_config.py  main.py  models.py  receipts.db  settings.py  signer.py  tools.py  verifier.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  animations.js  index.css
receipts_mcp/: README.md  __init__.py  __main__.py  config.py  proxy.py  server.py  upstreams.json.example
tests/: test_alerts.py  test_proxy.py  test_verification.py
tests/fixtures/: mock_upstream.py
